--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-circle-progress/1.2.2/circle-progress.min.js" integrity="sha512-6kvhZ/39gRVLmoM/6JxbbJVTYzL/gnbDVsHACLx/31IREU4l3sI7yeO0d4gw8xU5Mpmm/17LMaDHOCf+TvuC2Q==" crossorigin="anonymous"></script>
     <link rel="icon" href="img/m.png">
     <title>WELCOME</title>
     <link rel="stylesheet" href="style.css">
@@ -19,6 +22,7 @@
         <ul class="menu">
             <li><a href="#home" onclick="toggleMenu();">Home</a></li>
             <li><a href="#about" onclick="toggleMenu();">About</a></li>
+            <li><a href="#skills" onclick="toggleMenu();">Skills</a></li>
             <li><a href="#services" onclick="toggleMenu();">Services</a></li>
             <li><a href="#Work" onclick="toggleMenu();">Work</a></li>
             <li><a href="#contact" onclick="toggleMenu();">contact</a></li>
@@ -32,10 +36,29 @@
         <div class="textBx">
             <h2>Hello I'm<br><span>Muhammad.</span></h2>
             <h3>I'm Front End Web Devoloper.</h3>
-            <a href="#" class="btn">About Me</a>
         </div>
+                    <!-- social media icon -->
+                <div class="middle">
+                    <a class="btn" href="https://www.google.com/">
+                        <i class="fa fa-facebook" aria-hidden="true"></i>
+                    </a>
+
+                    <a class="btn" href="#">
+                        <i class="fa fa-twitter" aria-hidden="true"></i>
+                    </a>
+
+                    <a class="btn" href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSKjszTVvdpJSHSFTHxNhxsQcrTWWghRPckcPSrTrjzmlTNwKFPwmfZxnFGpcBMgKtPpSGbg">
+                        <i class="fa fa-envelope-o" aria-hidden="true"></i>
+                    </a>
+
+                    <a class="btn" href="#">
+                        <i class="fa fa-instagram" aria-hidden="true"></i>
+                    </a>
+                </div>
+                    <!-- social media icons-->
+
     </section>
-<!-- =========================== home end ============================================ -->
+<!-- =================================== home end ============================================ -->
 
 
 <!-- =================================== about start =================================== -->
@@ -57,6 +80,56 @@
 <!-- =================================== about end =================================== -->
 
 
+<!-- ================================== skills start ====================================== -->
+
+
+    <section class="skills" id="skills">
+        <h3>My Skills</h3>
+        <div class="wrapper">
+
+        <div class="card html">
+            <div class="circle">
+                <div class="bar"></div>
+                    <div class="box"><span></span></div>
+                </div>
+            <div class="text">HTML</div>
+        </div>
+
+
+        <div class="card css">
+            <div class="circle">
+                <div class="bar"></div>
+                    <div class="box"><span></span></div>
+                </div>
+            <div class="text">CSS</div>
+        </div>
+
+
+        <div class="card python">
+            <div class="circle">
+                <div class="bar"></div>
+                    <div class="box"><span></span></div>
+                </div>
+            <div class="text">Python</div>
+        </div>
+
+
+        <div class="card javascript">
+            <div class="circle">
+                <div class="bar"></div>
+                    <div class="box"><span></span></div>
+                </div>
+            <div class="text">javascript</div>
+        </div>
+
+
+    </div>
+
+    </section>
+
+<!-- ================================== skills end ====================================== -->
+
+
 <!-- ================================== services start ====================================== -->
     <section class="services" id="services">
          <div class="heading white">
@@ -65,11 +138,13 @@
         </div>
         <div class="content">
 
+
             <div class="servicesBx">
                 <img src="img/computer.png">
                 <h2>Web Design</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae.</p>
             </div>
+
 
             <div class="servicesBx">
                 <img src="img/website.png">
@@ -77,17 +152,20 @@
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae.</p>
             </div>
 
+
             <div class="servicesBx">
                 <img src="img/android.png">
                 <h2>Andoid App</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae.</p>
             </div>
 
+
             <div class="servicesBx">
                 <img src="img/video-player.png">
                 <h2>Video Editing</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae.</p>
             </div>
+
 
         </div>
     </section>
@@ -97,7 +175,7 @@
 <!-- ====================================== work start ========================================= -->
     <section class="work" id="Work">
          <div class="heading">
-            <h2>Our Latest Work</h2>
+            <h2>Recent Works</h2>
             <p>Lorem ipsum elit. Debitis qui quos voluptatu laudantiumr expedita.</p>
         </div>
 
@@ -119,6 +197,7 @@
                     <a href="#" class="btn">View More</a>
             </div>
         </div>
+
     </section>
 <!-- ====================================== work end ========================================= -->
 
@@ -141,7 +220,7 @@
                             <i class="fa fa-map-marker"></i>
                         </div>
                         <div class="text">
-                            <h3>Address</h3>
+                            <h3>Address:</h3>
                             <p>Mogadishu</p>
                         </div>
                     </div>
@@ -169,9 +248,13 @@
                     </div>
 
 
+
                 </div>
+
             </div>
     <!-- ========================= contactinfoBx end =========================================== -->
+
+
 
     <!-- ========================== formBx start =============================================== -->
 
@@ -190,6 +273,7 @@
     <!-- ============================ formBx end ============================================= -->
 
 
+
     <!-- ====================== footer start================================================== -->
 
     <div class="copyright">
@@ -199,7 +283,11 @@
     <!-- ====================== footer end ================================================== -->
 
 
+
 <!-- =================================== javascript start ====================================== -->
+
+
+<!-- nav start -->
     <script type"text/javascript">
     window.addEventListener("scroll", function(){
         var header = document.querySelector("header");
@@ -213,7 +301,41 @@
         menu.classList.toggle("active")
     }
     </script>
-<!-- ===================================== javascript end ====================================== -->
+<!-- nav end -->
 
+
+
+<!-- ================================= circle Progress start ================================== -->
+
+    <script>
+        let options = {
+            startAngle: -1.55,
+            size: 150,
+            value: 0.80,
+            fill: {color: "red"}
+
+        }
+        $(".circle .bar").circleProgress(options).on("circle-animation-progress",
+        function(event, progress, stepValue){
+            $(this).parent().find('span').text(String(stepValue.toFixed(2).substr(2)) + "%");
+        });
+        $('.css .bar').circleProgress({
+            value: 0.50,
+        });
+        $('.python .bar').circleProgress({
+            value: 0.60,
+        });
+         $('.html .bar').circleProgress({
+            value: 0.80,
+        });
+         $('.javascript .bar').circleProgress({
+            value: 0.20,
+        });
+    </script>
+<!-- ================================= circle Progress end =================================== -->
+
+
+
+<!-- ===================================== javascript end ====================================== -->
 </body>
 </html>
